<resources>
    <string name="app_name">Ticket Pass</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="skip">SKIP</string>
    <string name="login">LOGIN</string>
    <string name="login_small">Login</string>
    <string name="logout">Logout</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="proceed">Proceed</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="buy_now">Buy Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zip">Zip Code</string>
    <string name="phone">Phone Number</string>
    <string name="dob">DOB</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="log_in">Log In</string>
    <string name="already">Already have an account?</string>
    <string name="party">Party</string>
    <string name="food">Food</string>
    <string name="rock">Rock</string>
    <string name="drink">Drink</string>
    <string name="something_interesting">Something Interesting</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="all_location">All Location</string>
    <string name="location">Locations</string>
    <string name="loc">Location</string>
    <string name="data">1</string>
    <string name="type">2</string>
    <string name="facebook_app_id">826790230830686</string>
    <string name="fb_login_protocol_scheme">fb826790230830686</string>
    <string name="package_name">com.endive.eventplanner.activity</string>
    <string name="sort_by">Sort By</string>
    <string name="event_type">Event type</string>
    <string name="date">Date</string>
    <string name="desc">Description</string>
    <string name="location_on_map">Location on Map</string>
    <string name="tnc">T&amp;C</string>
    <string name="event_categories">Event Categories</string>
    <string name="price">Price</string>
    <string name="relevance">Relevance</string>
    <string name="paid">Paid</string>
    <string name="free">Free</string>
    <string name="dollar">$</string>
    <string name="details">Details</string>
    <string name="venues">Venues</string>
    <string name="tickets">Tickets</string>
    <string name="packages">Packages</string>
    <string name="ticket_type">Ticket Type:</string>
    <string name="total_ticket">Total Ticket :</string>
    <string name="total_tickets">Total Tickets :</string>
    <string name="buy">Buy Now</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="age">Age</string>
    <string name="years">Years</string>
    <string name="recommended">Recommended Events</string>
    <string name="trending_categories">Trending Categories</string>
    <string name="trending_search">Trending Search</string>
    <string name="search_events">Search Events</string>
    <string name="welcome">Welcome Guest!</string>
    <string name="log_sign_up">Login / SignUp</string>
    <string name="my_profile">My Profile</string>
    <string name="upcoming">Upcoming Events</string>
    <string name="past">Past Events</string>
    <string name="favorite">Favorite Events</string>
    <string name="sign_out">Sign Out</string>
    <string name="search_location">Search Location</string>
    <string name="organizer_company_name">XYZ</string>
    <string name="organizer_name">XYZ</string>
    <string name="web_site_url">XYZ</string>
    <string name="current_event">CURRENT EVENT</string>
    <string name="upcomming_event">UPCOMING EVENT</string>
    <string name="prev_event">PREV EVENT</string>
    <string name="ticket_available">Available Tickets</string>
    <string name="product_available">Available Products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_event">Total Event</string>
    <string name="total_tickets_sold">Total Tickets Sold</string>
    <string name="total_online_sales">Total Online Sales</string>
    <string name="total_sales_summary">TOTAL SALES SUMMARY</string>
    <string name="add_event">ADD EVENT</string>
    <string name="add_employee">ADD EMPLOYEE</string>
    <string name="add_order">ADD ORDER</string>
    <string name="coupon_code">COUPON CODE:</string>
    <string name="phone_no">Phone Number</string>
    <string name="fax_no">Fax Number</string>
    <string name="apply_coupon">APPLY COUPON</string>
    <string name="pay_now">PAY NOW</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="packageList">101</string>
    <string name="discount">Discount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="booked_on">Booking Date</string>
    <string name="event_date">Event Date</string>
    <string name="event_venue">Event Venue</string>
    <string name="ticket">Ticket</string>
    <string name="package_price">Package Price</string>
    <string name="contact_us">Contact Us</string>
    <string name="live_chat">Live Chat</string>
    <string name="case_studies">Case Studies</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="faq">FAQ</string>
    <string name="about">About Us</string>
    <string name="booking_fee">(INC. Booking Fee)</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="how_many_ticket">How Many Tickets?</string>
    <string name="online_sale">Online Sale</string>
    <string name="on_the_door_sales">On the door sales</string>
    <string name="order_id">ID #5456454564</string>
    <string name="amoutn_pay">AMOUNT PAYABLE:</string>
    <string name="loading">Loading...</string>
    <string name="gps_is_setting">GPS is settings</string>
    <string name="gps_is_not_enable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="percent">%</string>
    <string name="name_of_ticket">Name on Ticket</string>
    <string name="app_version">App Version</string>
    <string name="select_country">Select Country</string>
    <string name="select_venue">Select Venue</string>
    <string name="registration_success">Registration Successful. Verification mail has been sent on your registered mail id.</string>
    <string name="first_name_msg">Please enter first name</string>
    <string name="last_name_msg">Please enter last name</string>
    <string name="email_id_msg">Please enter email ID</string>
    <string name="email_vaild_id_msg">Please enter a valid email ID</string>
    <string name="mobile_no_msg">Please enter mobile number</string>
    <string name="valid_mobile_no_msg">Please enter a valid mobile number</string>
    <string name="no_between_msg">Mobile number must be between 10 to 15 digits</string>
    <string name="gender_msg">Please select gender</string>
    <string name="address_msg">Please enter address</string>
    <string name="city_msg">Please enter city</string>
    <string name="state_msg">Please enter state</string>
    <string name="country_msg">Please select country</string>
    <string name="zip_code_msg">Please enter zip code</string>
    <string name="zip_code_no_msg">Zip code must be between 5 to 8 digits</string>
    <string name="dob_msg">Please enter DOB</string>
    <string name="pass_msg">Please enter password</string>
    <string name="min_pass_msg">Your password should be a minimum of 6 characters</string>
    <string name="combination_pass_msg">Your password must contain a combination of alphabet, number and special character.</string>
    <string name="confirm_pass_msg">Please enter confirm password</string>
    <string name="confirm_pass_not_msg">Password and Confirm password does not match</string>
    <string name="tnc_menu">Terms &amp; Conditions</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="start_date_msg">Please select Start date first.</string>
    <string name="end_date_msg">End date cannot be empty</string>
    <string name="ticket_quantity_msg">Please select ticket quantity</string>
    <string name="venue_msg">Please select a venue to proceed</string>
    <string name="header_forgot_pass">Forgot Password</string>
    <string name="header_organizer_profile">Organizer Profile</string>
    <string name="header_select_seats">Select Seats</string>
    <string name="header_search_result">Search Result</string>
    <string name="header_coupons">COUPONS</string>
    <string name="header_location">Locations</string>
    <string name="header_recommend">Recommended Events</string>
    <string name="header_order_summary">ORDER SUMMARY</string>
    <string name="header_fill_details">Fill Details</string>
    <string name="header_edit_profile">Edit Profile</string>
    <string name="header_merchandise">Merchandise</string>
    <string name="select_merchant_limit">Select merchant Limit</string>
    <string name="select_age_limit">Select Age Limit</string>
    <string name="cancel_booking">Are you sure you want to cancel the booking ?</string>
    <string name="order_detail">Order Details</string>
    <string name="order_number">Order Number  :</string>
    <string name="event">Event</string>
    <string name="total_amt">Total Amt</string>
    <string name="sales_method">Sales Method</string>
    <string name="online">Online</string>
    <string name="person_list">Person List</string>
    <string name="package_details">Package Details</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="package_name_txt">Package Name</string>
    <string name="seats_number">Seat Number(s)</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="name">Name</string>
    <string name="merchandise_associated">Merchandise Associated</string>
    <string name="organizer_details">Organizer Details</string>
    <string name="billing_info">Billing Info</string>
    <string name="total_amount">Total Amount</string>
    <string name="amount">Amount</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="find_on_map">Find On Map</string>
    <string name="events_on">Events on :</string>
    <string name="events_on_upcoming">Events on Upcoming Dates</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_pass_msg">Please enter Old Password</string>
    <string name="fill_entries">Please fill all entries</string>
    <string name="profile_updated">Profile Updated Successfully</string>
    <string name="coupon_discount">Coupon Discount cannot be greater than Total Amount.</string>
</resources>