<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_up_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:focusableInTouchMode="true"
        android:padding="10dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:src="@mipmap/back_arrow_gray" />

        <android.support.v7.widget.SearchView
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:queryBackground="@android:color/transparent"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/title_text_size"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_events"
            app:searchIcon="@null" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/trending_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/trending_categories"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trending_categories_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:scrollbars="none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/trending_search"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trending_search_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:scrollbars="none" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
